# pin-service

./: .gitignore  README.md  pyproject.toml
client/: client.py
data/: hd_map_fixture.json
docker/: Dockerfile  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
docs/: EVIDENCE.md  index.html
load_tests/: locustfile.py
paper/: main.tex  refs.bib
pin_service/: candidate_gen.py  congestion.py  constraints.py  metrics.py  scorer.py  server.py  telemetry.py
proto/: pin_service.proto
scripts/: gen_proto.sh  train_model.py
tests/: test_candidate_gen.py  test_congestion.py  test_constraints.py  test_scorer.py
