[project]
name = "pin-service"
version = "0.1.0"
description = "Pin Infrastructure for autonomous-vehicle ride-hail PUDO selection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Arun Sharma" }]

dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=4.25",
    "h3>=4.0",
    "shapely>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "locust>=2.27",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
